<resources>
    <string name="app_name">Learn</string>
    <string name="title_activity_main">Learn</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="open_camera">打开相机</string>
    <string name="open_lv">打开Listview</string>
    <string name="open_chat">打开对话界面</string>
    <string name="title_activity_lv">LvActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="message_send_text">发送</string>
    <string name="title_activity_music">Activity</string>
    <string name="search">搜索</string>
    <string name="title_activity_save_file">SaveFileActivity</string>
    <string name="save_file">保存文件</string>
    <string name="open_save_file">打开保存文件</string>
    <string name="create_database">创建数据库</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="title_activity_database">DatabaseActivity</string>
    <string name="open_database">进入数据库设置</string>
    <string name="book_name">书名</string>
    <string name="insert_book_data">向Book表插入数据</string>
    <string name="insert_category_data">向Category中插入数据</string>
    <string name="book_author">作者</string>
    <string name="book_price">价格</string>
    <string name="book_page">总页数</string>
    <string name="show_data">显示下一条数据</string>
    <string name="delete_data">删除该记录</string>
    <string name="title_activity_get_perferences">GetPerferencesActivity</string>
    <string name="write_gpf">写入gpf</string>
    <string name="get_gpf">获取gpf</string>
    <string name="open_gpf">进入GPF</string>
    <string name="title_activity_alarm">AlarmActivity</string>
    <string name="select_music">选择闹钟音频</string>
    <string name="browse_title"><![CDATA[Videos by Your Company]]></string>
    <string name="related_movies">Related Videos</string>
    <string name="vertical_grid_title"><![CDATA[Vertical Video Grid]]></string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="init_text">00:00</string>
    <string name="play_pause_description">Play Pause Button</string>
    <string name="loading">Loading&#8230;</string>
    <string name="no_video_found">No video was found</string>
    <string name="about_app">About DemoCast Player</string>
    <string name="version">Version: %1$s</string>
    <string name="popular_header">Popular Videos</string>
    <string name="preferences">PREFERENCES</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>
    <string name="should_start">shouldStart</string>
    <string name="start_position">startPosition</string>
    <string name="search_results">Search Results</string>

    <!-- Error messages -->
    <string name="video_error_media_load_timeout">Media loading timed out</string>
    <string name="video_error_server_inaccessible">Media server was not reachable</string>
    <string name="video_error_unknown_error">Failed to load video</string>
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="oops">Oops</string>
    <string name="title_activity_musci">MusciActivity</string>
    <string name="title_activity_show_download">ShowDownloadActivity</string>
    <string name="show_download">显示</string>
    <string name="open_download">打开TASK</string>
</resources>
